--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="apple-mobile-web-app-title" content="Giphygram">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="apple-touch-startup-image" href="images/launch.png">
+        <meta name="theme-color" content="#0082F9"/>
 
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/icons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png">
